@@ -8,14 +8,13 @@
 	<version>0.0.1</version>
 	
 	<parent>
-		<groupId>com.github.lapissea.jdatablockfs</groupId>
+		<groupId>lapissea.jdatablockfs</groupId>
 		<artifactId>JDatablockFS</artifactId>
 		<version>1.0</version>
 	</parent>
 	
 	<properties>
-		<java.version>20</java.version>
-		<asmVersion>9.5</asmVersion>
+		<asmVersion>9.7</asmVersion>
 	</properties>
 	
 	<dependencies>
@@ -55,16 +54,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin-version}</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
